web-infras/parser/tests/fixtures/self-added/let-as-identifier/strict-mode/let-as-func-declar-param/output.txt
[SyntaxError]: unexpect keyword in strict mode (2,12)
2|function f(let) {
 |          ^
[SyntaxError]: unexpect keyword in strict mode (2,12)
2|function f(let) {
 |          ^
